--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.10'
+    ext.koin_version = '2.0.1'
+    ext.retrofit_version = '2.4.0'
+
     repositories {
         google()
         jcenter()
